// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner matches snapshot when all is true 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_banner.jpg",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <Text>
      All Communities
    </Text>
  </View>
</View>
`;

exports[`Banner matches snapshot with community 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "foom.png",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <Text>
      Foomunity
    </Text>
  </View>
</View>
`;

exports[`Banner matches snapshot with network 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "foomn.png",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <Text>
      Foom Network
    </Text>
  </View>
</View>
`;

exports[`matches the last header snapshot 1`] = `
Object {
  "headerBackTitle": null,
  "headerLeft": <Connect(MenuButton)
    openDrawer={[Function]}
  />,
  "headerRight": <View>
    <SearchIcon
      showSearch={[Function]}
    />
    <Connect(MessagesIcon)
      showMessages={[Function]}
    />
    <Connect(NotificationsIcon)
      showNotifications={[Function]}
    />
  </View>,
  "headerTitle": "Members",
  "headerTitleStyle": Object {
    "alignSelf": "center",
    "color": "black",
    "flex": 1,
    "fontFamily": "Circular-Bold",
    "fontSize": 18,
    "fontWeight": "200",
    "textAlign": "center",
  },
}
`;

exports[`renders correctly with no community and isAll 1`] = `
<View>
  <RCTScrollView
    ListFooterComponent={null}
    ListHeaderComponent={
      <View>
        <Banner
          all={true}
        />
        <View>
          <View>
            <Icon
              name="Search"
              size={30}
            />
            <TextInput
              allowFontScaling={true}
              onChangeText={[Function]}
              placeholder="Search Members"
              rejectResponderTermination={true}
              underlineColorAndroid="transparent"
            />
          </View>
          <PopupMenuButton
            actions={Array []}
          >
            <View>
              <Text />
              <Icon
                name="ArrowDown"
              />
            </View>
          </PopupMenuButton>
        </View>
      </View>
    }
    data={
      Array [
        Object {
          "avatarUrl": "foo.gif",
          "bio": "Hello!",
          "id": "1",
          "location": "here",
          "name": "Foo Lane",
        },
        Object {
          "avatarUrl": "bar.png",
          "bio": "Not a stork",
          "id": "2",
          "location": "there",
          "name": "Bar Jones",
        },
        Object {
          "avatarUrl": "baz.png",
          "bio": "Could be",
          "id": "3",
          "name": "Baz Chu",
        },
        Object {
          "avatarUrl": "bonk.jpg",
          "id": "4",
          "name": "Bonk Gundsdottir",
        },
        Object {
          "avatarUrl": "woof.png",
          "id": "5",
        },
        Object {
          "id": -1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns="2"
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View>
            <Image
              source={
                Object {
                  "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_banner.jpg",
                }
              }
            />
            <div
              colors={
                Array [
                  "rgba(0, 0, 0, 0)",
                  "rgba(0, 0, 0, 0.1)",
                  "rgba(0, 0, 0, 0.3)",
                  "rgba(0, 0, 0, 0.6)",
                ]
              }
            >
              MockLinearGradient
            </div>
            <View>
              <Text>
                All Communities
              </Text>
            </View>
          </View>
          <View>
            <View>
              <Icon
                name="Search"
                size={30}
              />
              <TextInput
                allowFontScaling={true}
                onChangeText={[Function]}
                placeholder="Search Members"
                rejectResponderTermination={true}
                underlineColorAndroid="transparent"
              />
            </View>
            <View
              accessible={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View>
                <Text />
                <Icon
                  name="ArrowDown"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "foo.gif",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Foo Lane
            </Text>
            <Text>
              here
            </Text>
            <Text
              numberOfLines={4}
            >
              Hello!
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "bar.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bar Jones
            </Text>
            <Text>
              there
            </Text>
            <Text
              numberOfLines={4}
            >
              Not a stork
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "baz.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Baz Chu
            </Text>
            <Text
              numberOfLines={4}
            >
              Could be
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "bonk.jpg",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bonk Gundsdottir
            </Text>
            <Text
              numberOfLines={4}
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View />
          <View />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders with invite button when a moderator 1`] = `
<View>
  <RCTScrollView
    ListFooterComponent={null}
    ListHeaderComponent={
      <View>
        <Banner
          all={true}
        />
        <Button
          iconName="Invite"
          onPress={[Function]}
          text="Invite People"
        />
        <View>
          <View>
            <Icon
              name="Search"
              size={30}
            />
            <TextInput
              allowFontScaling={true}
              onChangeText={[Function]}
              placeholder="Search Members"
              rejectResponderTermination={true}
              underlineColorAndroid="transparent"
            />
          </View>
          <PopupMenuButton
            actions={Array []}
          >
            <View>
              <Text />
              <Icon
                name="ArrowDown"
              />
            </View>
          </PopupMenuButton>
        </View>
      </View>
    }
    data={
      Array [
        Object {
          "avatarUrl": "foo.gif",
          "bio": "Hello!",
          "id": "1",
          "location": "here",
          "name": "Foo Lane",
        },
        Object {
          "avatarUrl": "bar.png",
          "bio": "Not a stork",
          "id": "2",
          "location": "there",
          "name": "Bar Jones",
        },
        Object {
          "avatarUrl": "baz.png",
          "bio": "Could be",
          "id": "3",
          "name": "Baz Chu",
        },
        Object {
          "avatarUrl": "bonk.jpg",
          "id": "4",
          "name": "Bonk Gundsdottir",
        },
        Object {
          "avatarUrl": "woof.png",
          "id": "5",
        },
        Object {
          "id": -1,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns="2"
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View>
            <Image
              source={
                Object {
                  "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_banner.jpg",
                }
              }
            />
            <div
              colors={
                Array [
                  "rgba(0, 0, 0, 0)",
                  "rgba(0, 0, 0, 0.1)",
                  "rgba(0, 0, 0, 0.3)",
                  "rgba(0, 0, 0, 0.6)",
                ]
              }
            >
              MockLinearGradient
            </div>
            <View>
              <Text>
                All Communities
              </Text>
            </View>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View>
                <View>
                  <Icon
                    name="Invite"
                  />
                  <Text>
                    Invite People
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View>
              <Icon
                name="Search"
                size={30}
              />
              <TextInput
                allowFontScaling={true}
                onChangeText={[Function]}
                placeholder="Search Members"
                rejectResponderTermination={true}
                underlineColorAndroid="transparent"
              />
            </View>
            <View
              accessible={true}
              focusable={true}
              hitSlop={
                Object {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View>
                <Text />
                <Icon
                  name="ArrowDown"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "foo.gif",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Foo Lane
            </Text>
            <Text>
              here
            </Text>
            <Text
              numberOfLines={4}
            >
              Hello!
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "bar.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bar Jones
            </Text>
            <Text>
              there
            </Text>
            <Text
              numberOfLines={4}
            >
              Not a stork
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "baz.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Baz Chu
            </Text>
            <Text
              numberOfLines={4}
            >
              Could be
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    Object {
                      "uri": "bonk.jpg",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bonk Gundsdottir
            </Text>
            <Text
              numberOfLines={4}
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View />
          <View />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
